--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
 		"cf-typegen": "wrangler types"
 	},
 	"dependencies": {
+		"@tailwindcss/vite": "^4.0.12",
 		"react": "^18.3.1",
-		"react-dom": "^18.3.1"
+		"react-dom": "^18.3.1",
+		"tailwindcss": "^4.0.12"
 	},
 	"devDependencies": {
 		"@cloudflare/vite-plugin": "^0.1.9",
