--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -13,7 +13,7 @@
 	},
 	"observability": {
 		"enabled": true
-	}
+	},
 	/**
 	 * Smart Placement
 	 * Docs: https://developers.cloudflare.com/workers/configuration/smart-placement/#smart-placement
@@ -26,7 +26,19 @@
 	 * databases, object storage, AI inference, real-time communication and more.
 	 * https://developers.cloudflare.com/workers/runtime-apis/bindings/
 	 */
-
+	"d1_databases": [
+		{
+			"binding": "DB",
+			"database_name": "dava-ghar-prod",
+			"database_id": "bea9d0ff-07f1-4634-af01-fb93febb048b"
+		}
+	],
+	"kv_namespaces": [
+		{
+			"binding": "KV",
+			"id": "e5ac2b35b87a41488f7971d204796607"
+		}
+	]
 	/**
 	 * Environment Variables
 	 * https://developers.cloudflare.com/workers/wrangler/configuration/#environment-variables
